--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 table, th, td {
   border: 1px solid black;
 	text-align:center;
-	
+	margin-top:15px;
+	margin-bottom:15px;
 }
 th, td{
 	padding:0 12px;
